welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:4: error: Invalid literal number
  for(i<-1to longueurT-1){
         ^maxValue:4: error: illegal start of simple expression
  for(i<-1to longueurT-1){
         ^maxValue:9: error: ')' expected but '}' found.
} return max 
^maxValue:9: error: ';' expected but 'return' found.
} return max 
  ^